refactor(#93, #94) : booking 메서드 락범위와 트랜잭션 범위 일치하도록 리팩토링, OrderCommandServiceTest, TicketCommandServiceTest, ShowDateCommandServiceTest, BookingServiceTest 단위테스트 작성 완료